[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/cards/light_frame.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/challenge/unit.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/challenge/unit.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/font/medium.otf"

[sub_resource type="DynamicFont" id=2]
size = 24
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/font/regular.otf"

[sub_resource type="DynamicFont" id=4]
size = 22
use_mipmaps = true
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/font/regular.otf"

[sub_resource type="DynamicFont" id=6]
size = 22
use_mipmaps = true
use_filter = true
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/font/medium.otf"

[sub_resource type="DynamicFont" id=8]
size = 24
use_mipmaps = true
use_filter = true
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://assets/font/regular.otf"

[sub_resource type="DynamicFont" id=10]
size = 24
use_mipmaps = true
use_filter = true
font_data = SubResource( 9 )

[node name="controller" type="Control"]
margin_right = 360.0
margin_bottom = 414.0
rect_min_size = Vector2( 360, 414 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mouse_check" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 23.0
margin_top = 16.0
margin_right = 336.0
margin_bottom = 392.0
toggle_mode = true
button_mask = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="light_frame" type="Node2D" parent="."]
modulate = Color( 0.392157, 0.862745, 0.262745, 0 )
position = Vector2( 177.292, 205.214 )
scale = Vector2( 1.331, 1.149 )

[node name="up" type="Sprite" parent="light_frame"]
position = Vector2( 0.796967, 78.6287 )
scale = Vector2( 1.48, 1.12 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 10, 10, 181, 181 )

[node name="down" type="Sprite" parent="light_frame"]
position = Vector2( 1.22733, -78.6764 )
scale = Vector2( 1.48, 1.12 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 10, 10, 181, 181 )

[node name="frame" type="Sprite" parent="."]
position = Vector2( 178.039, 207.734 )
scale = Vector2( 0.912098, 1 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 7, 12, 344, 387 )

[node name="anchor" type="Node2D" parent="."]
position = Vector2( -11, 0 )

[node name="player1_args" type="Label" parent="anchor"]
margin_left = 65.236
margin_top = 40.622
margin_right = 315.236
margin_bottom = 74.622
custom_fonts/font = SubResource( 2 )
text = "Player1 (58b85c19...):"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deck" type="Label" parent="anchor/player1_args"]
margin_left = 15.2841
margin_top = 35.3796
margin_right = 114.284
margin_bottom = 72.3796
custom_fonts/font = SubResource( 4 )
text = "卡牌数量:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="Label" parent="anchor/player1_args/deck"]
margin_left = 107.368
margin_top = 0.512573
margin_right = 129.368
margin_bottom = 34.5126
custom_fonts/font = SubResource( 6 )
text = "35"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="challenge" type="Label" parent="anchor/player1_args"]
visible = false
margin_left = 177.482
margin_top = 34.1803
margin_right = 243.482
margin_bottom = 68.1803
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.831373, 0.360784, 0.282353, 1 )
text = "挑战者"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player2_args" type="Label" parent="anchor"]
margin_left = 63.632
margin_top = 124.601
margin_right = 314.632
margin_bottom = 158.601
custom_fonts/font = SubResource( 2 )
text = "Player2 (40e88263...):"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deck" type="Label" parent="anchor/player2_args"]
margin_left = 17.3869
margin_top = 36.8086
margin_right = 116.387
margin_bottom = 73.8086
custom_fonts/font = SubResource( 4 )
text = "卡牌数量:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="Label" parent="anchor/player2_args/deck"]
margin_left = 107.368
margin_top = 0.512573
margin_right = 129.368
margin_bottom = 34.5126
custom_fonts/font = SubResource( 6 )
text = "35"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="challenge" type="Label" parent="anchor/player2_args"]
visible = false
margin_left = 178.995
margin_top = 36.4956
margin_right = 244.995
margin_bottom = 70.4956
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.831373, 0.360784, 0.282353, 1 )
text = "挑战者"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="staking_ckb" type="Label" parent="anchor"]
margin_left = 88.447
margin_top = 219.452
margin_right = 157.448
margin_bottom = 250.452
custom_fonts/font = SubResource( 8 )
text = "质押:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="Label" parent="anchor/staking_ckb"]
margin_left = 72.0
margin_top = -6.0
margin_right = 242.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 10 )
text = "350 CKB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bet_ckb" type="Label" parent="anchor"]
margin_left = 88.066
margin_top = 257.893
margin_right = 157.066
margin_bottom = 288.893
custom_fonts/font = SubResource( 8 )
text = "赌注:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="Label" parent="anchor/bet_ckb"]
margin_left = 72.0
margin_top = -6.0
margin_right = 248.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 10 )
text = "350 CKB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round" type="Label" parent="anchor"]
margin_left = 88.158
margin_top = 296.305
margin_right = 155.158
margin_bottom = 327.305
custom_fonts/font = SubResource( 8 )
text = "回合:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="Label" parent="anchor/round"]
margin_left = 71.8059
margin_top = -6.0
margin_right = 133.806
margin_bottom = 30.0
custom_fonts/font = SubResource( 10 )
text = "14"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remain_block" type="Label" parent="anchor"]
margin_left = 88.571
margin_top = 336.216
margin_right = 191.571
margin_bottom = 367.216
custom_fonts/font = SubResource( 8 )
text = "剩余区块:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="Label" parent="anchor/remain_block"]
margin_left = 117.0
margin_top = -6.0
margin_right = 232.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 10 )
text = "120"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="mouse_check" to="." method="_on_mouse_check_gui_input"]
[connection signal="mouse_entered" from="mouse_check" to="." method="_on_mouse_check_mouse_entered"]
[connection signal="mouse_exited" from="mouse_check" to="." method="_on_mouse_check_mouse_exited"]
